--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bcgov/MyGovBC-MSP-Service#readme",
   "dependencies": {
     "colors": "^1.1.2",
-    "http-proxy": "^1.16.2"
+    "http-proxy": "^1.16.2",
+    "ssl-root-cas": "^1.2.3"
   }
 }
