--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/bcgov/MyGovBC-MSP-Service#readme",
   "dependencies": {
     "colors": "^1.1.2",
-    "http-proxy": "^1.16.2"
+    "http-proxy": "^1.16.2",
+    "winston": "^2.3.1",
+    "winston-logstash": "^0.3.0"
   },
   "engines": {
     "node": ">=4.2.5"
