--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "http-proxy": "^1.16.2",
+    "jsonwebtoken": "^7.3.0",
     "winston": "^2.3.1",
     "winston-syslog": "^1.2.5"
   },
