--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/bcgov/MyGovBC-MSP-Service#readme",
   "dependencies": {
     "colors": "^1.1.2",
-    "http-proxy": "^1.16.2",
+    "express": "^4.15.0",
+    "http-proxy-middleware": "^0.17.4",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
     "winston": "^2.3.1",
