--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
     "winston": "^2.3.1",
-    "winston-syslog": "^1.2.5"
+    "request": "^2.83.0"
   },
   "engines": {
     "node": ">=4.2.5"
