--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "http-proxy-middleware": "^0.17.4",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
-    "winston": "^2.3.1",
+    "winston": "^2.3.1"
   },
   "engines": {
     "node": ">=4.2.5"
