--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/bcgov/MyGovBC-MSP-Service#readme",
   "dependencies": {
     "colors": "^1.1.2",
+    "cron": "^1.5.0",
     "express": "^4.15.0",
     "http-proxy-middleware": "^0.17.4",
     "json-stringify-safe": "^5.0.1",
