--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
     "moment": "^2.20.1",
+    "uuid": "^3.3.2",
     "winston": "^2.3.1"
   },
   "engines": {
