--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "dependencies": {
     "colors": "^1.1.2",
     "express": "^4.15.0",
-    "http-proxy-middleware": "^0.17.4",
+    "http-proxy-middleware": "^0.20.0",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
+    "loopback": "^3.26.0",
     "moment": "^2.20.1",
     "winston": "^2.3.1"
   },
   "engines": {
-    "node": ">=4.2.5"
+    "node": ">=8.0.0"
   }
 }
