--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "Launch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +24,7 @@
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
     "loopback": "^3.26.0",
+    "loopback-connector-soap": "^5.0.0",
     "moment": "^2.20.1",
     "winston": "^2.3.1"
   },
