--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "address-validator",
+  "name": "mygovbc-msp-service",
   "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "Launch index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bcgov/MyGovBC-MSP-Service.git#addressValidation"
+    "url": "git+https://github.com/bcgov/MyGovBC-MSP-Service.git"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -20,15 +20,13 @@
   "dependencies": {
     "colors": "^1.1.2",
     "express": "^4.15.0",
-    "http-proxy-middleware": "^0.20.0",
+    "http-proxy-middleware": "^0.17.4",
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^7.3.0",
-    "loopback": "^3.26.0",
-    "loopback-connector-soap": "^5.0.0",
     "moment": "^2.20.1",
     "winston": "^2.3.1"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=4.2.5"
   }
 }
